app/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devscale-nginx-service
spec:
  selector:
    app: devscale-nginx
  ports:
    - port: 80
      targetPort: 80
